[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudoku-solver"
version = "0.1.0"
description = "A high-performance Sudoku solver application."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "numpy",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
solver = "src.solver:main"
new_solver = "src.new_solver:main"
app = "src.app:main"

[tool.uv]
package = true

# THE CORRECT HATCH LAYOUT DIRECTIVE
[tool.hatch.build]
packages = ["src"]
